buildscript {
    repositories {
        mavenCentral()
        maven { url = "https://maven.minecraftforge.net/" }
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "[6.0,6.2)"
    }
}

apply plugin: "java"
apply plugin: "net.minecraftforge.gradle"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

version = "1.20.1-1"
group = "gwydion0917.gwycraft"
archivesBaseName = "gwycraft"

repositories {
    maven { url = "https://maven.blamejared.com" }
    maven { url = "https://api.modrinth.com/maven" }
}

minecraft {
    mappings channel: "official", version: "1.20.1"

    runs {
        "client" {
            workingDirectory file("./run")
            mods { gwycraft { source sourceSets.main } }
            // Jade
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
        }
        "server" {
            workingDirectory file("./run/server")
            mods { gwycraft { source sourceSets.main } }
        }
        "data" {
            workingDirectory file("./run")
            args "--mod", "gwycraft", "--all",
                 "--output", file("src/generated/resources/"),
                 "--existing", file("src/main/resources/")
            mods { gwycraft { source sourceSets.main } }
        }
    }
}

sourceSets {
    main {
        resources {
            srcDirs "src/main/resources", "src/generated/resources"
        }
    }
}

// When src/main/resources and src/generated/resources have the same relative path
// (hand-authored blockstates take priority over generated ones), keep the first copy.
tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

dependencies {
    minecraft "net.minecraftforge:forge:1.20.1-47.4.20"

    // JEI — API on compile path, full jar at runtime
    compileOnly fg.deobf("mezz.jei:jei-1.20.1-forge-api:15.3.0.4")
    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.3.0.4")

    // jade_version example: 11.13.2+forge
    // Visit https://modrinth.com/mod/jade/versions?l=forge to get the latest version
    implementation fg.deobf("maven.modrinth:jade:11.13.2+forge")
}
